Refine stylesheet - avoid squashing the table of contents

--- a/templates/style-page.css
+++ b/templates/style-page.css
@@ -44,7 +44,7 @@ a small {
 }
 
 .wrapper {
-    width: 900px;
+    width: 90%;
     margin: 0 auto;
     margin-top: 4em;
 }
@@ -136,7 +136,6 @@ header ul li a {
 #navcontainer a
 {
     display: block;
-    width: 20em;
     padding: 3px 12px 3px 8px;
     text-decoration: none;
     border-bottom: 1px solid #fff;
@@ -164,7 +163,6 @@ header ul li a {
 #navcontainer li li li li a
 {
     display: block;
-    width: 20em;
     padding: 0px 0px 0px 35px;
     text-decoration: none;
     border-bottom: 1px solid #fff;
@@ -172,9 +170,10 @@ header ul li a {
 }
 
 section {
-    width: 600px;
-    float: right;
+    width: 700px;
+    float: left;
     padding-bottom: 50px;
+    margin-left: 20px;
 }
 
 small {
